adicionado authenticação jwt, implementação do axios com a api

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Store</title>
+
+    <h2>Login</h2>
+    <input type="text" name="Email" id="email" placeholder="example@email.com"><br>
+    <input type="text" name="password" id="password" placeholder="*************">
+    <button onclick="login()">Entrar</button>
+
+
     <hr>
     <h4>Lista de games</h4>
     <ul id="games"></ul>
